small fixes for ttl

--- a/config.json
+++ b/config.json
@@ -211,6 +211,7 @@
     "PruneLogsOnly": false,
     "PruneLogsTTL": 2592000,
     "PruneSkipToTimestamp": 0,
+    "PruneUpdateConfig": false,
     "ReadHeaderTimeoutSeconds": 20,
     "ReadTimeoutSeconds": 20,
     "SchemaVersion": 3,
@@ -218,7 +219,6 @@
     "TLSCert": "./.setup/keys/nginx.crt",
     "TLSKey": "./.setup/keys/nginx.key",
     "TempDirectory": "./tmp/",
-    "UpdateConfigAfterPrune": true,
     "UrlFilter": "http(s|)://(api|tr|dev|spark|superset|jupyter|msgxc)(\\.staging\\.|\\.|)(valid9\\.com|sfpl\\.io|localhost)(:[0-9]*|)(/[^\\?#]*)(\\?|#|)",
     "UrlFilterMatchGroup": 6,
     "UseGeoIP": true,
