--- a/config.json
+++ b/config.json
@@ -208,7 +208,9 @@
     "ProxyUrl": "http://localhost:3030",
     "ProxyUrlFilter": ".*(dontlogthese|login|css|js|json|jpeg|jpg|gif|png|ico)",
     "PruneLimit": 100000,
+    "PruneLogsSkip" : false,
     "PruneLogsOnly": false,
+    "PruneLogsPageSize": 0,
     "PruneLogsTTL": 2592000,
     "PruneSkipToTimestamp": 0,
     "PruneUpdateConfig": false,
