added additional parameters

--- a/.setup/parcel/config.yaml
+++ b/.setup/parcel/config.yaml
@@ -23,6 +23,7 @@ Cookies:
         COOKIE_EXPERIMENT: x
         COOKIE_EXP_PARAMS: xp
         COOKIE_QPS: qps
+        COOKIE_CONSENT: CookieConsent
 Routes:
     "/settings":
         Regex: /settings
