--- a/config.json
+++ b/config.json
@@ -54,6 +54,7 @@
         "chat.sfpl.io"
     ],
     "GeoIPVersion": 1,
+    "HealthCheckInterval": 300,
     "IPv4GeoIPCSVDest": "IP2LOCATION-LITE-DB11.CSV",
     "IPv4GeoIPZip": "./.setup/geoip/IP2LOCATION-LITE-DB11.CSV.ZIP",
     "IPv6GeoIPCSVDest": "IP2LOCATION-LITE-DB11.IPV6.CSV",
@@ -289,6 +290,11 @@
     "PruneUpdateConfig": false,
     "ReadHeaderTimeoutSeconds": 20,
     "ReadTimeoutSeconds": 20,
+    "S3Bucket": "sfpl-data",
+    "S3Prefix": "track",    
+    "S3Region": "us-east-1",
+    "S3AccessKeyID": "{S3_ACCESS_KEY_ID}",
+    "S3SecretAccessKey": "{S3_SECRET_ACCESS_KEY}",
     "SchemaVersion": 3,
     "StaticDirectory": "public",
     "TLSCert": "./.setup/keys/nginx.crt",
