moved url to /tr/v1 so we can merge it one day

--- a/.setup/parcel/config.yaml
+++ b/.setup/parcel/config.yaml
@@ -34,10 +34,9 @@ Tracker:
     ApiVersion: v1
     WebSocket: true
     WS:
-        Development: ws://localhost:8880/v1/ws
-        Staging: ws://tr.sfpl.io/v1/ws
-        Production: wss://tr.sfpl.io/v1/ws
-
+        Development: ws://localhost:8880/tr/v1/ws
+        Staging: ws://tr.sfpl.io/tr/v1/ws
+        Production: wss://tr.sfpl.io/tr/v1/ws
     Url: 
         Development: http://localhost:8880
         Staging: https://tr.sfpl.io
