--- a/.setup/parcel/package.json
+++ b/.setup/parcel/package.json
@@ -15,7 +15,8 @@
   },
   "devDependencies": {
     "@parcel/transformer-yaml": "^2.0.1",
-    "parcel": "^2.0.1"
+    "parcel": "^2.0.1",
+    "process": "^0.11.10"
   },
   "scripts": {
     "start": "parcel index.html",
