--- a/config.json
+++ b/config.json
@@ -134,7 +134,7 @@
             ],
             "Retries": 3,
             "Secure": false,
-            "Service": "clickhouse",
+            "Service": "clickhouse_",
             "Timeout": 300
         },
         {
